# macaca

./: .gitignore  .gitmodules  README.md
data/axyb/: eyetracker2lighthouse.txt
data/camera/eye/left/: ost.txt  ost.yaml
data/camera/eye/right/: ost.txt  ost.yaml
data/camera/scene/stereo/: CalibratedTransform.yml  TransformPairsInput.yml  left.yaml  ost.txt  right.yaml
data/eyescene_map/: 1.yml  2.yml  ColorBlock _nice.yml  ColorBlock.yml  EyeSceneMapCalibrationData.yml
data/handeye/eyetracker/: lscene_tracker0.yml  lscene_tracker2.yml  pnp2lighthouse.yml  robot_tracker1.yml  tracker1_robot.yml
data/lighthouse/: eyetracker_points.txt  handtool_points.txt
data/reconstruction/: extrinsics.yml  intrinsics.yml
scripts/: calib_color_block.sh  calib_scene_left_right.sh  calib_sceneeye.sh  calib_tf_markers_to_eyeleft.sh  calib_tf_markers_to_eyeright.sh  calib_tf_markers_to_sceneleft.sh  calib_tf_markers_to_sceneright.sh  camera_all.sh  camera_scene.sh  data_obtain.sh  eye_cameras_ar_track.sh  scene_camera_ar_track.sh  scene_eye_ar_track.sh  tf_all.sh  vive_tracker.sh  vive_tracker_py.sh
src/3d_reconstructure/: CMakeLists.txt  package.xml
src/3d_reconstructure/include/3d_reconstructure/: reconstructure.h
src/3d_reconstructure/src/: extrinsics.yml  intrinsics.yml  reconstructure.cpp
src/ar_track_alvar/ar_track_alvar/: CMakeLists.txt
src/ar_track_alvar/ar_track_alvar/bundles/: 4.xml  MarkerData_0-8_0.5.xml  MarkerData_0-8_5.4.xml  MarkerData_0_1_3_4.xml  MarkerData_4_5_7_8.xml
src/ar_track_alvar/ar_track_alvar/nodes/: FindMarkerBundlesNoKinect.cpp
src/ar_track_alvar/ar_track_alvar/src/: Camera.cpp
src/ar_track_alvar/ar_track_alvar/srv/: MarkerPoseClient.cpp  MarkerPoseServer.cpp  MarkerPoseService.srv
src/camera/tis/: CMakeLists.txt  package.xml
src/camera/tis/launch/: tiscamera_ar.launch  tiscamera_single_node.launch  tiscamera_stereo.launch
src/camera/tis/src/: single_camera.py  tiscamera.py
src/camera/usbcam/: CMakeLists.txt  package.xml
src/camera/usbcam/launch/: usbcam_eye.launch  usbcam_scene.launch  usbcam_single_node.launch
src/camera/usbcam/src/: image_publisher.cpp  usbcam_node.cpp
src/communication/: CMakeLists.txt  package.xml
src/communication/include/: communication.h
src/communication/src/: communication.cpp
src/darknet_ros/darknet_ros/config/: ros.yaml
src/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp  yolo_object_detector_node.cpp
src/data_obtain/: CMakeLists.txt  package.xml
src/data_obtain/scripts/: data_obtain.py
src/eyetracking/eyetracking/: CMakeLists.txt  package.xml
src/eyetracking/eyetracking/cfg/: PupilParams.cfg
src/eyetracking/eyetracking/include/: algo.h  blob_gen.h  canny_impl.h  filter_edges.h  find_best_edge.h
src/eyetracking/eyetracking/include/pure/: PuRe.h  PuReST.h  PupilDetectionMethod.h  PupilTrackingMethod.h
src/eyetracking/eyetracking/launch/: double_pupiltracking.launch  single_pupiltracking.launch
src/eyetracking/eyetracking/param/: l.yml
src/eyetracking/eyetracking/src/: ElSe.cpp  ExCuSe.cpp  PuRe.cpp  PuReST.cpp  PupilDetectionMethod.cpp  PupilTrackingMethod.cpp  eyetracking_node.cpp
src/eyetracking/eyetracking_msgs/: CMakeLists.txt  package.xml
src/eyetracking/eyetracking_msgs/msg/: ImagePoint.msg  ImagePoints.msg  RotatedRect.msg
src/handeye_calib_camodocal/launch/: handeye_file.launch
src/lighthouse/: CMakeLists.txt  package.xml
src/lighthouse/include/lighthouse_track/: consumer.h  object.h  productor.h  ringbuffer.h  serial.h  track_object.h
src/lighthouse/launch/: eyetracker.launch  track_marker.launch
src/lighthouse/src/: lighthouse_node.cpp  object.cpp  serial.cpp  track_object.cpp  trackdata_publisher.cpp
src/macaca_eyescene_map/: CMakeLists.txt  package.xml
src/macaca_eyescene_map/cfg/: ColorBlock.cfg
src/macaca_eyescene_map/launch/: ar_tag.launch  color_block.launch  fit_point.launch
src/macaca_eyescene_map/param/: artag.yml  colorblock.yml  fit_point.yml
src/macaca_eyescene_map/scripts/: fit_point.py
src/macaca_eyescene_map/src/: artag.cpp  colorblock.cpp
src/macaca_perception/macaca_mask_rcnn/: CMakeLists.txt  package.xml
src/macaca_perception/macaca_mask_rcnn/launch/: infer.launch
src/macaca_perception/macaca_mask_rcnn/src/: infer.py
src/macaca_perception/macaca_mask_rcnn_msgs/: CMakeLists.txt  package.xml
src/macaca_perception/macaca_mask_rcnn_msgs/msg/: BBox.msg  (+2 more)
src/macaca_tf_setup/: CMakeLists.txt  package.xml
src/macaca_tf_setup/launch/: tf_setup.launch
src/macaca_tf_setup/scripts/: pub_handeye_tf.py
src/macaca_tf_setup/src/: macaca_tf_setup_node.cpp
src/reconstructure/: CMakeLists.txt  package.xml
src/reconstructure/include/reconstructure/: reconstructure.h
src/reconstructure/src/: communication.cpp  extrinsics.yml  image_subscriber.cpp  reconstructure.cpp  reconstructure1.cpp  ros_serial.cpp
src/reconstructure/src/720_eye_matlab/: extrinsics.yml  intrinsics.yml
src/reconstructure/src/720_eye_matlab_zhangqi/: extrinsics.yml  intrinsics.yml
src/reconstructure/src/720_eye_opencv/: extrinsics.yml  intrinsics.yml
src/reverse_kinematics/: CMakeLists.txt  package.xml
src/reverse_kinematics/include/reverse_kinematics/: foward_kinemat.h  matrix_inverse.h  matrix_multiply.h
src/reverse_kinematics/src/: foward_kinemat.cpp  inverse_kinemat.cpp  matrix_multiply.cpp  reverse_kinematics.cpp
src/roi_reconstructure/: CMakeLists.txt  package.xml
src/roi_reconstructure/include/roi_reconstructure/: roi_reconstructure.h
src/roi_reconstructure/src/: roi_reconstructure.cpp
src/vive_tracker/: CMakeLists.txt  package.xml
src/vive_tracker/include/vive_tracker/: LighthouseTracking.h
src/vive_tracker/src/: LighthouseTracking.cpp  LighthouseTracking1.cpp  tracker.cpp
src/vive_tracker_py/: CMakeLists.txt  package.xml
src/vive_tracker_py/scripts/: openvr_tracker.py
src/x_arm_hand_planning/: CMakeLists.txt  package.xml
src/x_arm_hand_planning/include/x_arm_hand_planning/: addObject.h  collisionCheck.h
src/x_arm_hand_planning/src/: addObject.cpp  collisionCheck.cpp  poseScan.cpp  test_random.cpp
(+7 files in other folders)
